--- a/.github/workflows/rebuild-containers.yml
+++ b/.github/workflows/rebuild-containers.yml
@@ -1,36 +1,44 @@
-name: Rebuild Noble Multi-Arch Container
+name: image-build
 
 on:
-  push
+  workflow_dispatch:
+
+env:
+  USER: ${{secrets.DOCKER_USERNAME}}
 
 jobs:
-  build-noble-multiarch:
-    name: Build Multi-Arch Noble Container
-    runs-on: ubuntu-latest
-
+  docker_build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            arch: amd64
+          - os: ubuntu-22.04-arm
+            arch: arm64
     steps:
-      - name: Checkout Repository
+      - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          install: true
-
-      - name: Log in to DockerHub
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{env.USER}}
+          password: ${{secrets.DOCKER_PAT}}
+      - name: Build and push
+        run: |
+            docker build --tag ${{env.USER}}/docker-uname:${{matrix.arch}} src/test/docker/noble/.
+            docker push ${{env.USER}}/docker-uname:${{matrix.arch}}
 
-      - name: Build and Push Multi-Arch Noble Image
-        uses: docker/build-push-action@v5
+  docker_manifest:
+    needs: docker_build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
         with:
-          file: src/test/docker/noble/Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: wihobbs/testenv:latest
-
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
+      - name: Create and push manifest
+        run: |
+            docker manifest create wihobbs/docker-uname wihobbs/docker-uname:amd64 wihobbs/docker-uname:arm64
+            docker manifest push wihobbs/docker-uname
