python: RFC 46 jobspec resource string parser
Problem: There is no parser for the CLI Jobspec Resource String Syntax
proposed in RFC 46.

Add a flux.cli_jobspec.parser Python module which implements a parser
using the 'ply' module (mimicking the constraint parser).

For testing, the parser may be run from the command line with

 flux python -m flux.cli_parser.parser [OPTIONS] -- EXPRESSION

--- a/src/bindings/python/flux/Makefile.am
+++ b/src/bindings/python/flux/Makefile.am
@@ -77,6 +77,9 @@ nobase_fluxpy_PYTHON = \
 	constraint/parser.py \
 	constraint/parsetab.py \
 	constraint/__init__.py \
+	cli_jobspec/parser.py \
+	cli_jobspec/parsetab.py \
+	cli_jobspec/__init__.py \
 	abc/journal.py \
 	abc/__init__.py \
 	utils/parsedatetime/__init__.py \
@@ -118,10 +121,12 @@ endif
 
 
 BUILT_SOURCES = \
-	constraint/parsetab.py
+	constraint/parsetab.py \
+	cli_jobspec/parsetab.py
 
 CLEANFILES = \
 	constraint/parser.out \
+	cli_jobspec/parser.out \
 	$(BUILT_SOURCES)
 
 STDERR_DEVNULL = $(stderr_devnull_$(V))
@@ -139,8 +144,14 @@ constraint/parsetab.py: constraint/parser.py
 	  $(PYTHON) $< --outputdir $(builddir)/constraint $(STDERR_DEVNULL) && \
 	  touch $@
 
+cli_jobspec/parsetab.py: cli_jobspec/parser.py
+	$(AM_V_GEN)$(MKDIR_P) cli_jobspec && \
+	  $(PYTHON) $< --outputdir $(builddir)/cli_jobspec $(STDERR_DEVNULL) && \
+	  touch $@
+
 clean-local:
 	-rmdir constraint 2>/dev/null || :
+	-rmdir cli_jobspec 2>/dev/null || :
 	-rm -f *.pyc */*.pyc *.pyo */*.pyo
 	-rm -rf __pycache__ */__pycache__
 
