fix tabs and spaces

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,8 +152,8 @@ jobs:
         # For merge group events, use the merge group head ref
         ref: ${{ github.event_name == 'merge_group' && github.event.merge_group.head_sha || github.ref }}
       filters: | 
-        core: 
-	- src/test/docker/**/Dockerfile
+        testenv:
+        - src/test/docker/**/Dockerfile
   
 #  rebuild-testenv-container:
 #  needs: rebuild-testenv
