--- a/.github/workflows/testenv.yml
+++ b/.github/workflows/testenv.yml
@@ -1,3 +1,4 @@
+# vim: set shiftwidth=2 tabstop=2 softtabstop=2 expandtab:
 on: 
   workflow_dispatch:
     inputs:
@@ -17,8 +18,8 @@ on:
         - focal
 name: rebuild testenv containers using docker buildx
 jobs:
-  build-and-push-containers:
-    name: build and push new testenv containers
+  build-containers:
+    name: build new testenv containers
     runs-on: ubuntu-24.04-arm
 #  env:
 #    DOCKER_USERNAME: travisflux
@@ -39,3 +40,22 @@ jobs:
       -
         name: Build the actual containers
         run: docker buildx build --platform=linux/arm64,linux/amd64 --tag fluxrm/testenv:${{ inputs.distro }} -f src/test/docker/${{ inputs.distro }}/Dockerfile .
+  run-make-check-amd64:
+    name: run make check in newly-built testenv containers
+    runs-on: ubuntu-latest
+    needs: build-containers
+    steps:
+    - name: docker run make check
+      run: docker run fluxrm/testenv:${{ inputs.distro }} echo "hello"
+  run-make-check-arm:
+    name: run make check in newly-built testenv containers
+    runs-on: ubuntu-24.04-arm
+    needs: build-containers
+    steps:
+    - name: docker run make check
+      run: docker run fluxrm/testenv:${{ inputs.distro }} echo "hello"
+#   create-manifest:
+#     runs-on: ubuntu-latest
+#     needs: [build-containers, run-make-check-arm64, run-make-check-amd64]
+#     steps: 
+#   
