--- a/.github/workflows/testenv.yml
+++ b/.github/workflows/testenv.yml
@@ -16,15 +16,16 @@ on:
         - fedora40
         - jammy
         - focal
+        - trixie
 name: rebuild testenv containers using docker buildx
 jobs:
   build-containers:
     name: build new testenv containers
     runs-on: ubuntu-24.04-arm
-#  env:
-#    DOCKER_USERNAME: travisflux
-#    DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
-#    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  env:
+    DOCKERHUB_REPO: wihobbs
+    DOCKER_USERNAME: wihobbs
+    DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
     steps:
       -
         name: Checkout
@@ -39,21 +40,21 @@ jobs:
         uses: docker/setup-buildx-action@v3
       -
         name: Build the actual containers
-        run: docker buildx build --platform=linux/arm64,linux/amd64 --tag fluxrm/testenv:${{ inputs.distro }} -f src/test/docker/${{ inputs.distro }}/Dockerfile .
-  run-make-check-amd64:
-    name: run make check in newly-built testenv containers
-    runs-on: ubuntu-latest
-    needs: build-containers
-    steps:
-    - name: docker run make check
-      run: docker run fluxrm/testenv:${{ inputs.distro }} echo "hello"
-  run-make-check-arm:
-    name: run make check in newly-built testenv containers
-    runs-on: ubuntu-24.04-arm
-    needs: build-containers
-    steps:
-    - name: docker run make check
-      run: docker run fluxrm/testenv:${{ inputs.distro }} echo "hello"
+        run: docker buildx build --push --platform=linux/arm64,linux/amd64 --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }} -f src/test/docker/${{ inputs.distro }}/Dockerfile .
+#  run-make-check-amd64:
+#    name: run make check in newly-built testenv containers
+#    runs-on: ubuntu-latest
+#    needs: build-containers
+#    steps:
+#    - name: docker run make check
+#      run: docker run $DOCKERHUB_REPO/testenv:${{ inputs.distro }} echo "hello"
+#  run-make-check-arm:
+#    name: run make check in newly-built testenv containers
+#    runs-on: ubuntu-24.04-arm
+#    needs: build-containers
+#    steps:
+#    - name: docker run make check
+#      run: docker run $DOCKERHUB_REPO/testenv:${{ inputs.distro }} echo "hello"
 #   create-manifest:
 #     runs-on: ubuntu-latest
 #     needs: [build-containers, run-make-check-arm64, run-make-check-amd64]
