--- a/.github/workflows/testenv.yml
+++ b/.github/workflows/testenv.yml
@@ -22,10 +22,10 @@ jobs:
   build-containers:
     name: build new testenv containers
     runs-on: ubuntu-24.04-arm
-  env:
-    DOCKERHUB_REPO: wihobbs
-    DOCKER_USERNAME: wihobbs
-    DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
+    env:
+      DOCKERHUB_REPO: wihobbs
+      DOCKER_USERNAME: wihobbs
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
     steps:
       -
         name: Checkout
@@ -38,6 +38,12 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      -
+        name: docker login
+        uses: docker/login-action@v3.6.0
+        with:
+          username: $DOCKER_USERNAME
+          password: $DOCKER_PASSWORD
       -
         name: Build the actual containers
         run: docker buildx build --push --platform=linux/arm64,linux/amd64 --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }} -f src/test/docker/${{ inputs.distro }}/Dockerfile .
