--- a/.github/workflows/testenv.yml
+++ b/.github/workflows/testenv.yml
@@ -42,8 +42,8 @@ jobs:
         name: docker login
         uses: docker/login-action@v3.6.0
         with:
-          username: $DOCKER_USERNAME
-          password: $DOCKER_PASSWORD
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
       -
         name: Build the actual containers
         run: docker buildx build --push --platform=linux/arm64,linux/amd64 --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }} -f src/test/docker/${{ inputs.distro }}/Dockerfile .
