--- a/.github/workflows/testenv.yml
+++ b/.github/workflows/testenv.yml
@@ -19,8 +19,37 @@ on:
         - trixie
 name: rebuild testenv containers using docker buildx
 jobs:
-  build-containers:
-    name: build new testenv containers
+  build-amd64-container:
+    name: build new testenv container for arm
+    runs-on: ubuntu-latest
+    env:
+      DOCKERHUB_REPO: wihobbs
+      DOCKER_USERNAME: wihobbs
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v5
+      -
+        # Add support for more platforms with QEMU (optional)
+        # https://github.com/docker/setup-qemu-action
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: docker login
+        uses: docker/login-action@v3.6.0
+        with:
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
+      -
+        name: Build the actual containers
+        run: docker buildx build --push --platform=linux/amd64 --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }} -f src/test/docker/${{ inputs.distro }}/Dockerfile .
+
+  build-arm-container:
+    name: build new testenv container for arm
     runs-on: ubuntu-24.04-arm
     env:
       DOCKERHUB_REPO: wihobbs
@@ -46,7 +75,64 @@ jobs:
           password: ${{ env.DOCKER_PASSWORD }}
       -
         name: Build the actual containers
-        run: docker buildx build --push --platform=linux/arm64,linux/amd64 --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }} -f src/test/docker/${{ inputs.distro }}/Dockerfile .
+        run: docker buildx build --push --platform=linux/arm64 --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }} -f src/test/docker/${{ inputs.distro }}/Dockerfile .
+
+  publish-manifest:
+    name: Publish multi-arch manifest
+    needs:
+      - build-amd64-container
+      - build-arm-container
+    runs-on: ubuntu-latest
+    env:
+      DOCKERHUB_REPO: wihobbs
+      DOCKER_USERNAME: wihobbs
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: docker login
+        uses: docker/login-action@v3.6.0
+        with:
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
+
+      # This creates (or updates) the tag to be a manifest list containing both arches.
+      # It relies on the two arch-specific images already existing under the same tag.
+      - name: Create and push manifest
+        run: |
+          set -euo pipefail
+          IMAGE="${DOCKERHUB_REPO}/testenv:${{ inputs.distro }}"
+
+          docker buildx imagetools create \
+            --tag "${IMAGE}" \
+            "${IMAGE}"
+
+      - name: Inspect published manifest
+        run: |
+          set -euo pipefail
+          IMAGE="${DOCKERHUB_REPO}/testenv:${{ inputs.distro }}"
+          docker buildx imagetools inspect "${IMAGE}"
+
+
+#   create-manifest:
+#     name: create docker manifest from amd64/arm64 builds
+#     runs-on: ubuntu-latest
+#     needs: [build-amd64-container, build-arm-container]
+#     env:
+#       DOCKERHUB_REPO: wihobbs
+#       DOCKER_USERNAME: wihobbs
+#       DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
+#     steps:
+#       - 
+#         name: docker login
+#         uses: docker/login-action@v3.6.0
+#         with:
+#           username: ${{ env.DOCKER_USERNAME }}
+#           password: ${{ env.DOCKER_PASSWORD }}
+#       - 
+#         name: create docker manifest
+#         run: 
 #  run-make-check-amd64:
 #    name: run make check in newly-built testenv containers
 #    runs-on: ubuntu-latest
