--- a/.github/workflows/testenv.yml
+++ b/.github/workflows/testenv.yml
@@ -19,66 +19,91 @@ on:
         - trixie
 name: rebuild testenv containers using docker buildx
 jobs:
+## start of AI slop?
   build-amd64-container:
-    name: build new testenv container for arm
+    name: build new testenv container for amd64
     runs-on: ubuntu-latest
+    outputs:
+      image_digest: ${{ steps.digest.outputs.digest }}
     env:
       DOCKERHUB_REPO: wihobbs
       DOCKER_USERNAME: wihobbs
       DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v5
-      -
-        # Add support for more platforms with QEMU (optional)
-        # https://github.com/docker/setup-qemu-action
-        name: Set up QEMU
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: docker login
+
+      - name: docker login
         uses: docker/login-action@v3.6.0
         with:
           username: ${{ env.DOCKER_USERNAME }}
           password: ${{ env.DOCKER_PASSWORD }}
-      -
-        name: Build the actual containers
-        run: docker buildx build --push --platform=linux/amd64 --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }} -f src/test/docker/${{ inputs.distro }}/Dockerfile .
 
+      - name: Build amd64 image
+        id: build
+        run: |
+          docker buildx build \
+            --push \
+            --platform=linux/amd64 \
+            --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }} \
+            -f src/test/docker/${{ inputs.distro }}/Dockerfile .
+
+      - name: Capture amd64 digest
+        id: digest
+        run: |
+          DIGEST=$(docker buildx imagetools inspect \
+            $DOCKERHUB_REPO/testenv:${{ inputs.distro }} \
+            --format '{{json .Manifest.Digest}}')
+          echo "digest=${DIGEST}" >> "$GITHUB_OUTPUT"
   build-arm-container:
-    name: build new testenv container for arm
+    name: build new testenv container for arm64
     runs-on: ubuntu-24.04-arm
+    outputs:
+      image_digest: ${{ steps.digest.outputs.digest }}
     env:
       DOCKERHUB_REPO: wihobbs
       DOCKER_USERNAME: wihobbs
       DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v5
-      -
-        # Add support for more platforms with QEMU (optional)
-        # https://github.com/docker/setup-qemu-action
-        name: Set up QEMU
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: docker login
+
+      - name: docker login
         uses: docker/login-action@v3.6.0
         with:
           username: ${{ env.DOCKER_USERNAME }}
           password: ${{ env.DOCKER_PASSWORD }}
-      -
-        name: Build the actual containers
-        run: docker buildx build --push --platform=linux/arm64 --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }} -f src/test/docker/${{ inputs.distro }}/Dockerfile .
 
+      - name: Build arm64 image
+        id: build
+        run: |
+          docker buildx build \
+            --push \
+            --platform=linux/arm64 \
+            --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }} \
+            -f src/test/docker/${{ inputs.distro }}/Dockerfile .
+
+      - name: Capture arm64 digest
+        id: digest
+        run: |
+          DIGEST=$(docker buildx imagetools inspect \
+            $DOCKERHUB_REPO/testenv:${{ inputs.distro }} \
+            --format '{{json .Manifest.Digest}}')
+          echo "digest=${DIGEST}" >> "$GITHUB_OUTPUT"
   publish-manifest:
-    name: Publish multi-arch manifest
+    name: Publish multi-arch manifest (digest pinned)
     needs:
       - build-amd64-container
       - build-arm-container
@@ -97,24 +122,124 @@ jobs:
           username: ${{ env.DOCKER_USERNAME }}
           password: ${{ env.DOCKER_PASSWORD }}
 
-      # This creates (or updates) the tag to be a manifest list containing both arches.
-      # It relies on the two arch-specific images already existing under the same tag.
-      - name: Create and push manifest
+      - name: Create and push multi-arch manifest
         run: |
           set -euo pipefail
+
           IMAGE="${DOCKERHUB_REPO}/testenv:${{ inputs.distro }}"
+
+          AMD64_DIGEST="${{ needs.build-amd64-container.outputs.image_digest }}"
+          ARM64_DIGEST="${{ needs.build-arm-container.outputs.image_digest }}"
 
           docker buildx imagetools create \
             --tag "${IMAGE}" \
-            "${IMAGE}"
+            "${IMAGE}@${AMD64_DIGEST}" \
+            "${IMAGE}@${ARM64_DIGEST}"
 
-      - name: Inspect published manifest
+      - name: Inspect final manifest
         run: |
-          set -euo pipefail
-          IMAGE="${DOCKERHUB_REPO}/testenv:${{ inputs.distro }}"
-          docker buildx imagetools inspect "${IMAGE}"
+          docker buildx imagetools inspect \
+            ${DOCKERHUB_REPO}/testenv:${{ inputs.distro }}
 
 
+
+
+##   build-amd64-container:
+##     name: build new testenv container for arm
+##     runs-on: ubuntu-latest
+##     env:
+##       DOCKERHUB_REPO: wihobbs
+##       DOCKER_USERNAME: wihobbs
+##       DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
+##     steps:
+##       -
+##         name: Checkout
+##         uses: actions/checkout@v5
+##       -
+##         # Add support for more platforms with QEMU (optional)
+##         # https://github.com/docker/setup-qemu-action
+##         name: Set up QEMU
+##         uses: docker/setup-qemu-action@v3
+##       -
+##         name: Set up Docker Buildx
+##         uses: docker/setup-buildx-action@v3
+##       -
+##         name: docker login
+##         uses: docker/login-action@v3.6.0
+##         with:
+##           username: ${{ env.DOCKER_USERNAME }}
+##           password: ${{ env.DOCKER_PASSWORD }}
+##       -
+##         name: Build the actual containers
+##         run: docker buildx build --push --platform=linux/amd64 --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }} -f src/test/docker/${{ inputs.distro }}/Dockerfile .
+## 
+##   build-arm-container:
+##     name: build new testenv container for arm
+##     runs-on: ubuntu-24.04-arm
+##     env:
+##       DOCKERHUB_REPO: wihobbs
+##       DOCKER_USERNAME: wihobbs
+##       DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
+##     steps:
+##       -
+##         name: Checkout
+##         uses: actions/checkout@v5
+##       -
+##         # Add support for more platforms with QEMU (optional)
+##         # https://github.com/docker/setup-qemu-action
+##         name: Set up QEMU
+##         uses: docker/setup-qemu-action@v3
+##       -
+##         name: Set up Docker Buildx
+##         uses: docker/setup-buildx-action@v3
+##       -
+##         name: docker login
+##         uses: docker/login-action@v3.6.0
+##         with:
+##           username: ${{ env.DOCKER_USERNAME }}
+##           password: ${{ env.DOCKER_PASSWORD }}
+##       -
+##         name: Build the actual containers
+##         run: docker buildx build --push --platform=linux/arm64 --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }} -f src/test/docker/${{ inputs.distro }}/Dockerfile .
+## 
+##   publish-manifest:
+##     name: Publish multi-arch manifest
+##     needs:
+##       - build-amd64-container
+##       - build-arm-container
+##     runs-on: ubuntu-latest
+##     env:
+##       DOCKERHUB_REPO: wihobbs
+##       DOCKER_USERNAME: wihobbs
+##       DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
+##     steps:
+##       - name: Set up Docker Buildx
+##         uses: docker/setup-buildx-action@v3
+## 
+##       - name: docker login
+##         uses: docker/login-action@v3.6.0
+##         with:
+##           username: ${{ env.DOCKER_USERNAME }}
+##           password: ${{ env.DOCKER_PASSWORD }}
+## 
+##       # This creates (or updates) the tag to be a manifest list containing both arches.
+##       # It relies on the two arch-specific images already existing under the same tag.
+##       - name: Create and push manifest
+##         run: |
+##           set -euo pipefail
+##           IMAGE="${DOCKERHUB_REPO}/testenv:${{ inputs.distro }}"
+## 
+##           docker buildx imagetools create \
+##             --tag "${IMAGE}" \
+##             "${IMAGE}"
+## 
+##       - name: Inspect published manifest
+##         run: |
+##           set -euo pipefail
+##           IMAGE="${DOCKERHUB_REPO}/testenv:${{ inputs.distro }}"
+##           docker buildx imagetools inspect "${IMAGE}"
+## 
+## 
 #   create-manifest:
 #     name: create docker manifest from amd64/arm64 builds
 #     runs-on: ubuntu-latest
