--- a/.github/workflows/testenv.yml
+++ b/.github/workflows/testenv.yml
@@ -19,91 +19,68 @@ on:
         - trixie
 name: rebuild testenv containers using docker buildx
 jobs:
-## start of AI slop?
   build-amd64-container:
     name: build new testenv container for amd64
     runs-on: ubuntu-latest
     outputs:
       image_digest: ${{ steps.digest.outputs.digest }}
-    env:
-      DOCKERHUB_REPO: wihobbs
-      DOCKER_USERNAME: wihobbs
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: docker login
-        uses: docker/login-action@v3.6.0
-        with:
-          username: ${{ env.DOCKER_USERNAME }}
-          password: ${{ env.DOCKER_PASSWORD }}
-
-      - name: Build amd64 image
+      
+      - name: Build and tar amd64 image
         id: build
         run: |
+          set -euo pipefail
+          mkdir -p out
           docker buildx build \
-            --push \
+            -o type=docker,dest=out/testenv-${{ inputs.distro }}-amd64 \
             --platform=linux/amd64 \
-            --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }} \
+            --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }}-amd64 \
             -f src/test/docker/${{ inputs.distro }}/Dockerfile .
 
-      - name: Capture amd64 digest
-        id: digest
-        run: |
-          DIGEST=$(docker buildx imagetools inspect \
-            $DOCKERHUB_REPO/testenv:${{ inputs.distro }} \
-            --format '{{json .Manifest.Digest}}')
-          echo "digest=${DIGEST}" >> "$GITHUB_OUTPUT"
-  build-arm-container:
+      - name: Upload arm64 container tarball
+        uses: actions/upload-artifact@v4
+        with:
+          name: testenv-${{ inputs.distro }}-arm64
+          path: out/testenv-${{ inputs.distro }}-arm64.tar
+          if-no-files-found: error
+  
+  build-arm64-container:
     name: build new testenv container for arm64
     runs-on: ubuntu-24.04-arm
     outputs:
       image_digest: ${{ steps.digest.outputs.digest }}
-    env:
-      DOCKERHUB_REPO: wihobbs
-      DOCKER_USERNAME: wihobbs
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: docker login
-        uses: docker/login-action@v3.6.0
-        with:
-          username: ${{ env.DOCKER_USERNAME }}
-          password: ${{ env.DOCKER_PASSWORD }}
-
-      - name: Build arm64 image
+      
+      - name: Build and tar arm64 image
         id: build
         run: |
+          set -euo pipefail
+          mkdir -p out
           docker buildx build \
-            --push \
+            -o type=docker,dest=out/testenv-${{ inputs.distro }}-arm64 \
             --platform=linux/arm64 \
-            --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }} \
+            --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }}-arm64 \
             -f src/test/docker/${{ inputs.distro }}/Dockerfile .
 
-      - name: Capture arm64 digest
-        id: digest
-        run: |
-          DIGEST=$(docker buildx imagetools inspect \
-            $DOCKERHUB_REPO/testenv:${{ inputs.distro }} \
-            --format '{{json .Manifest.Digest}}')
-          echo "digest=${DIGEST}" >> "$GITHUB_OUTPUT"
+      - name: Upload arm64 container tarball
+        uses: actions/upload-artifact@v4
+        with:
+          name: testenv-${{ inputs.distro }}-arm64
+          path: out/testenv-${{ inputs.distro }}-arm64.tar
+          if-no-files-found: error
+
   publish-manifest:
-    name: Publish multi-arch manifest (digest pinned)
+    name: Push images + publish multi-arch manifest
     needs:
       - build-amd64-container
       - build-arm-container
@@ -122,27 +99,52 @@ jobs:
           username: ${{ env.DOCKER_USERNAME }}
           password: ${{ env.DOCKER_PASSWORD }}
 
-      - name: Create and push multi-arch manifest
+      - name: Download amd64 artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: testenv-${{ inputs.distro }}-amd64
+          path: artifacts
+
+      - name: Download arm64 artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: testenv-${{ inputs.distro }}-arm64
+          path: artifacts
+
+      - name: Load images from tarballs
         run: |
           set -euo pipefail
+          docker load -i artifacts/testenv-${{ inputs.distro }}-amd64.tar
+          docker load -i artifacts/testenv-${{ inputs.distro }}-arm64.tar
+          docker images | head -n 50
 
+      # Push arch-specific tags first
+#       - name: Push per-arch tags
+#         run: |
+#           set -euo pipefail
+#           AMD_TAG="${DOCKERHUB_REPO}/testenv:${{ inputs.distro }}-amd64"
+#           ARM_TAG="${DOCKERHUB_REPO}/testenv:${{ inputs.distro }}-arm64"
+# 
+#           docker push "${AMD_TAG}"
+#           docker push "${ARM_TAG}"
+# 
+      # Then create the multi-arch manifest that points at the per-arch tags
+      - name: Create and push manifest
+        run: |
+          set -euo pipefail
           IMAGE="${DOCKERHUB_REPO}/testenv:${{ inputs.distro }}"
-
-          AMD64_DIGEST="${{ needs.build-amd64-container.outputs.image_digest }}"
-          ARM64_DIGEST="${{ needs.build-arm-container.outputs.image_digest }}"
+          AMD_TAG="${DOCKERHUB_REPO}/testenv:${{ inputs.distro }}-amd64"
+          ARM_TAG="${DOCKERHUB_REPO}/testenv:${{ inputs.distro }}-arm64"
 
           docker buildx imagetools create \
             --tag "${IMAGE}" \
-            "${IMAGE}@${AMD64_DIGEST}" \
-            "${IMAGE}@${ARM64_DIGEST}"
+            "${AMD_TAG}" \
+            "${ARM_TAG}"
 
-      - name: Inspect final manifest
+      - name: Inspect published manifest
         run: |
-          docker buildx imagetools inspect \
-            ${DOCKERHUB_REPO}/testenv:${{ inputs.distro }}
-
-
-
+          set -euo pipefail
+          docker buildx imagetools inspect ${DOCKERHUB_REPO}/testenv:${{ inputs.distro }}
 
 ##   build-amd64-container:
 ##     name: build new testenv container for arm
