--- a/.github/workflows/testenv.yml
+++ b/.github/workflows/testenv.yml
@@ -43,12 +43,15 @@ jobs:
             --platform=linux/amd64 \
             --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }}-amd64 \
             -f src/test/docker/${{ inputs.distro }}/Dockerfile .
+          ls out
+          ls
+          docker images
 
-      - name: Upload arm64 container tarball
+      - name: Upload amd64 container tarball
         uses: actions/upload-artifact@v4
         with:
-          name: testenv-${{ inputs.distro }}-arm64
-          path: out/testenv-${{ inputs.distro }}-arm64.tar
+          name: testenv-${{ inputs.distro }}-amd64
+          path: out/testenv-${{ inputs.distro }}-amd64.tar
           if-no-files-found: error
   
   build-arm64-container:
@@ -75,6 +78,9 @@ jobs:
             --platform=linux/arm64 \
             --tag $DOCKERHUB_REPO/testenv:${{ inputs.distro }}-arm64 \
             -f src/test/docker/${{ inputs.distro }}/Dockerfile .
+          ls out
+          ls
+          docker images
 
       - name: Upload arm64 container tarball
         uses: actions/upload-artifact@v4
