--- a/.github/workflows/testenv.yml
+++ b/.github/workflows/testenv.yml
@@ -28,7 +28,7 @@ jobs:
     name: build new testenv container for amd64
     runs-on: ubuntu-latest
     env: 
-      DOCKERHUB_REPO: fluxrm
+      DOCKERHUB_REPO: wihobbs
     outputs:
       image_digest: ${{ steps.digest.outputs.digest }}
     steps:
@@ -60,7 +60,7 @@ jobs:
     name: build new testenv container for arm64
     runs-on: ubuntu-24.04-arm
     env: 
-      DOCKERHUB_REPO: fluxrm
+      DOCKERHUB_REPO: wihobbs
     outputs:
       image_digest: ${{ steps.digest.outputs.digest }}
     steps:
@@ -93,7 +93,7 @@ jobs:
     needs: build-amd64-container
     runs-on: ubuntu-latest
     env: 
-      DOCKERHUB_REPO: fluxrm
+      DOCKERHUB_REPO: wihobbs
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -123,9 +123,9 @@ jobs:
       - build-arm64-container
     runs-on: ubuntu-latest
     env:
-      DOCKERHUB_REPO: fluxrm
-      DOCKER_USERNAME: travisflux
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TRAVISFLUX_TOKEN }}
+      DOCKERHUB_REPO: wihobbs
+      DOCKER_USERNAME: wihobbs
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_wihobbs_TOKEN }}
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
